--- a/tutorias/package.json
+++ b/tutorias/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
+    "moment": "^2.30.1",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0"
   }
