--- a/tutorias/package.json
+++ b/tutorias/package.json
@@ -20,5 +20,10 @@
     "moment": "^2.30.1",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0"
   }
 }
