--- a/users/package.json
+++ b/users/package.json
@@ -18,6 +18,11 @@
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "mongodb": "^6.6.2",
-    " ": "^8.4.0"
+    "mongoose": "^8.4.3"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0"
   }
 }
