--- a/openai/package.json
+++ b/openai/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "conversion-monetaria",
+  "name": "openai",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "axios": "^1.7.2",
-    "body-parser": "^1.20.2",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
-  },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "eslint": "^9.5.0",
     "globals": "^15.6.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "openai": "^4.52.0"
   }
 }
