--- a/users/package.json
+++ b/users/package.json
@@ -14,11 +14,17 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "i": "^0.3.7",
     "joi": "^17.13.1",
     "mongodb": "^6.6.2",
-    "mongoose": "^8.4.3"
+    "mongoose": "^8.4.3",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
+    "npm": "^10.8.1",
+    "twilio": "^5.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
